[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/GUI/ScrollableList.gd" type="Script" id=1]
[ext_resource path="res://scripts/GUI/ListButton.gd" type="Script" id=2]

[node name="ScrollableList" type="Node"]

script/script = ExtResource( 1 )

[node name="ListWindow" type="CenterContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
margin/left = 150.0
margin/top = 100.0
margin/right = 150.0
margin/bottom = 290.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
use_top_left = false

[node name="BackPanel" type="Panel" parent="ListWindow"]

margin/left = 350.0
margin/top = 67.0
margin/right = 950.0
margin/bottom = 567.0
rect/min_size = Vector2( 600, 500 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="Title" type="RichTextLabel" parent="ListWindow/BackPanel"]

margin/right = 600.0
margin/bottom = 30.0
rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
bbcode/enabled = true
bbcode/bbcode = "[center]Title[/center]"
visible_characters = -1

[node name="ScrollContainer" type="ScrollContainer" parent="ListWindow/BackPanel"]

anchor/right = 1
anchor/bottom = 1
margin/top = 34.0
margin/right = 5.0
margin/bottom = 125.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
scroll/horizontal = false
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="ListWindow/BackPanel/ScrollContainer"]

visibility/behind_parent = true
margin/right = 595.0
margin/bottom = 19.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0

[node name="Button" type="Button" parent="ListWindow/BackPanel/ScrollContainer/VBoxContainer"]

margin/right = 595.0
margin/bottom = 19.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
toggle_mode = false
text = "testing"
flat = false
script/script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="ListWindow/BackPanel"]

margin/top = 411.0
margin/right = 599.0
margin/bottom = 493.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = true
bbcode/bbcode = "test"
visible_characters = -1

[connection signal="mouse_enter" from="ListWindow/BackPanel/ScrollContainer/VBoxContainer/Button" to="ListWindow/BackPanel/ScrollContainer/VBoxContainer/Button" method="_on_Button_mouse_enter"]


